solucion de errores en clases

--- a/App.config
+++ b/App.config
@@ -18,7 +18,7 @@
 		</providers>
 	</entityFramework>
 	<connectionStrings>
-		<add name="ManagerPrestamosContext"
+		<add name="DBContext"
 			 connectionString="Data Source=(localdb)\MSSQLLocaldb;Initial Catalog=master;Integrated Security=True;MultipleActiveResultSets=True"
 			 providerName="System.Data.SqlClient"/>
 	</connectionStrings>
